--- a/team7.Rmd
+++ b/team7.Rmd
@@ -2,7 +2,61 @@
 title: "prologue"
 author: "gyc"
 date: "2022-08-08"
-output: html_document
+output:
+  word_document: default
+  html_document: default
 ---
+
+# R을 알리조의 캐글 데이터를 활용한 데이터 분석
+
+## 이혜진
+### 활용데이터
+- **텍사스 집 가격**
+- *House Prices - Advanced Regression Techniques*
+- 출처: https://www.kaggle.com/competitions/house-prices-advanced-regression-techniques/data
+- 어려웠던 점
+    - 특정 열에 있는 차고가 없는 데이터가 'NO GARAGE'가 아닌 NA값으로 되어 있어서  
+      이 열의 NA를 분석에 활용 될수 있도록 값을 변경해야 할까??
+- 기대되는 점
+    - 
+    
+## 김수아
+- **당뇨병 검사**
+- *Pima Indians Diabetes Database*
+- 출처: https://www.kaggle.com/datasets/uciml/pima-indians-diabetes-database
+- 어려웠던 점
+    - 인슐린의 데이터가 0인 부분이 많아서 어떻게 처리해야 할까??
+- 기대되는 점
+    - 
+
+## 곽영효
+### 활용데이터
+- **전세계 라면의 평가**
+- *Top Ramen Ratings 2022*
+- 출처: https://www.kaggle.com/datasets/ankanhore545/top-ramen-ratings-2022
+- 어려웠던 점
+    - 
+- 기대되는 점
+    - 전세계의 라면의 종류에 대해 분석을 해보는 기대감과 즐거움
+    - 한국 라면의 위상???
+
+## 이호진
+### 활용데이터
+- **자전가 대여**
+- *Bike Sharing Demand*
+- 출처: https://www.kaggle.com/competitions/bike-sharing-demand/data
+- 어려웠던 점
+    - R의 미숙함으로 인한 코드를 만드는데 어려움
+    - 11/12년도만 있어서 아쉬움
+- 기대되는 점
+    - 어떤 변수를 활용하면 자전거의 대여가 늘어나는지 확인
+    - 
+
+
+
+
+
+
+
 
 
